<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>kafka-ui-contract</module>
        <module>kafka-ui-api</module>
        <module>kafka-ui-e2e-checks</module>
    </modules>

    <properties>
        <maven.compiler.source>13</maven.compiler.source>
        <maven.compiler.target>13</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring-boot.version>2.5.6</spring-boot.version>
        <jackson-databind-nullable.version>0.2.2</jackson-databind-nullable.version>
        <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
        <org.projectlombok.version>1.18.20</org.projectlombok.version>
        <org.projectlombok.e2e-checks.version>1.18.20</org.projectlombok.e2e-checks.version>
        <git.revision>latest</git.revision>
        <zookeper.version>3.7.0</zookeper.version>
        <kafka-clients.version>2.8.0</kafka-clients.version>
        <node.version>v14.17.1</node.version>
        <dockerfile-maven-plugin.version>1.4.10</dockerfile-maven-plugin.version>
        <frontend-maven-plugin.version>1.12.0</frontend-maven-plugin.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
        <openapi-generator-maven-plugin.version>4.3.0</openapi-generator-maven-plugin.version>
        <swagger-annotations.version>1.6.0</swagger-annotations.version>
        <springdoc-openapi-webflux-ui.version>1.2.32</springdoc-openapi-webflux-ui.version>
        <avro.version>1.11.0</avro.version>
        <confluent.version>5.5.1</confluent.version>
        <apache.commons.version>2.2</apache.commons.version>
        <test.containers.version>1.16.2</test.containers.version>
        <junit-jupiter-engine.version>5.7.2</junit-jupiter-engine.version>
        <mockito.version>2.21.0</mockito.version>
        <assertj.version>3.19.0</assertj.version>
        <antlr4-maven-plugin.version>4.7.1</antlr4-maven-plugin.version>
        <groovy.version>3.0.9</groovy.version>

        <frontend-generated-sources-directory>..//kafka-ui-react-app/src/generated-sources
        </frontend-generated-sources-directory>
        <sonar.organization>provectus</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <buildVersion>0.0.1-SNAPSHOT</buildVersion>
    </properties>

    <repositories>
        <repository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </repository>
        <repository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </pluginRepository>
        <pluginRepository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
        </pluginRepository>
    </pluginRepositories>

    <groupId>com.provectus</groupId>
    <artifactId>kafka-ui</artifactId>
    <version>${buildVersion}</version>
    <name>kafka-ui</name>
    <description>Kafka metrics for UI panel</description>
</project>
